--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="main.js"></script>
+    <title>Test</title>
+   
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Pig Latin Translator!</h1>
     <hr/>
     <div id="display-element"></div>
-    <button onclick="displayDate()">Click Me</button>
+
+    <input type="text" id="wordbox">
+    <button id="toPigLatin">Translate to Pig Latin</button>
     <hr/>
+
+    <ul id="wordList"></ul>
+    <script src="main.js"></script>
   </body>
 </html>
